# pluggy-python

./: .env.example  .gitignore  README.md  config.py  example.py  mkdocs.yml  poetry.toml  pyproject.toml
docs/: index.md
docs/stylesheet/: extra.css
example/src/: accounts.py  auth.py  categories.py  connectors.py  identity.py  income_reports.py  investments.py  item.py  loans.py  opportunities.py  transactions.py  utils.py  validation.py
pluggy/api/: baseApi.py  base_api.py  client.py  config.py  transforms.py
pluggy/api/protocols/: account.py  auth.py  category.py  income_report.py  investment.py  item.py  transaction.py
pluggy/api/type/: account.py  auth.py  category.py  identity.py  investment.py  item.py  loans.py  opportunity.py  transaction.py  validation.py  webhook.py
pluggy/api/typing/: __init__.py  account.py  category.py  common.py  connector.py  execution.py  identity.py  investment.py  loans.py  opportunity.py  transaction.py  validation.py  webhook.py
pypluggy/api/: base_api.py  client.py  config.py  transforms.py
pypluggy/api/type/: account.py  auth.py  category.py  common.py  execution.py  income_report.py  investment.py  opportunity.py  transaction.py
