[tool.poetry]
name = "pluggy-python"
version = "0.1.0"
description = "Unofficial Python SDK for Pluggy API"
authors = ["Heitor Carvalho Pinheiro <heitor.c.pinheiro@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
asyncio = "^3.4.3"
mypy = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
pytest = "^8.1.1"
blue = "^0.9.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options] 
 pythonpath = "." 
 addopts = "--doctest-modules" 

 [tool.isort] 
 profile = "black" 
 line_length = 79 

 [tool.taskipy.tasks] 
 lint = "blue . && isort ."  
 docs = "mkdocs serve" 

 [tool.mypy] 
 warn_unused_configs = true 
 
